# Qt

./: CMakeLists.txt  README  counter.cpp  counter.h  main.cpp
